--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
   <div id="main">
       <div id="container">
           <router-outlet></router-outlet>
+          <app-login></app-login>
       </div>
   </div>
 </div>
