--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div id="container-navbar">
   <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
-      <a routerLink="/users" href="#">Unesi korisnika</a>
+      <a routerLink="/users" href="#" (click)="closeNav()">Unesi korisnika</a>
       <br>
-      <a routerLink="/user-search" href="#">Pregled korisnika</a>
+      <a routerLink="/user-search" href="#" (click)="closeNav()">Pregled korisnika</a>
       <br>
       <a href="#">Azuriraj korisnika</a>
       <br>
@@ -17,7 +17,7 @@
   <div id="main">
       <div id="container">
           <router-outlet></router-outlet>
-          <app-login></app-login>
+          <!-- <app-login></app-login> -->
       </div>
   </div>
 </div>
