css login, slika itd

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,11 @@
 #container-navbar{
     padding:20px;
 }
-#container{
+/* #container{
     padding-top:-50px;
     padding-left:50px;
     font-size:auto;
-}
+} */
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
@@ -45,10 +45,10 @@
 }
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
+/* #main {
     transition: margin-left .5s;
     padding: 20px;
-}
+} */
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
