--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,10 @@
-<div class="container">
-  <form class="example-form" (submit)="userLogin($event)">
+  <form class="lead example-form" (submit)="userLogin($event)" align>
     <mat-form-field class="example-full-width">
       <input matInput placeholder="Login ID" >
     </mat-form-field>
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Password" >
+      <input matInput placeholder="Šifra" >
     </mat-form-field>
-    <button mat-raised-button color="primary">Login</button>
+    <button class="btn btn-lg btn-success" >Prijavi se</button>
   </form>
-</div>
+  <img src="assets/MTS-Telekom-final-logo.png" alt="Telekom" class="centerimg">
