--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,21 +2,27 @@
   <div class="row">
     <div class="form-horizontal col-md-5">
       <form class="example-form" (ngSubmit)="onSubmit()">
+        <div class="form-group">
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Ime" [formControl]="firstName" [errorStateMatcher]="matcher" >
+            <input matInput placeholder="Ime" [formControl]="firstName" [errorStateMatcher]="matcher">
             <mat-hint>Unesite ime korinsika</mat-hint>
             <mat-error *ngIf="firstName.hasError('required')">
-              Ime je <strong>obavezno!</strong>
+              Ime je
+              <strong>obavezno!</strong>
             </mat-error>
           </mat-form-field>
+        </div>
+        <div class="form-group">
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Prezime" [formControl]="lastName" [errorStateMatcher]="matcher" >
+            <input matInput placeholder="Prezime" [formControl]="lastName" [errorStateMatcher]="matcher">
             <mat-hint>Unesite prezime korinsika</mat-hint>
             <mat-error *ngIf="lastName.hasError('required')">
-              Prezime je <strong>obavezno!</strong>
+              Prezime je
+              <strong>obavezno!</strong>
             </mat-error>
           </mat-form-field>
-        <button type="submit" class="btn btn-primary crni" [disabled]="notEntered()" >Kreiraj</button>
+        </div>
+        <button mat-raised-button color="primary" [disabled]="notEntered()">Kreiraj</button>
         <hr />
       </form>
       <div *ngIf="!IsHidden">
