--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,8 +2,13 @@
     min-width: 150px;
     max-width: 500px;
     width: 100%;
+    margin-left: 250px;
   }
   
   .example-full-width {
     width: 100%;
+  }
+
+  .centerimg {
+    margin-left: 125px;
   }
