--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,15 +1,15 @@
-.container{
+/* .container{
     margin-top:80px;
     padding:30px;
-}
-.btn.btn-primary.crni{
+} */
+/* .btn.btn-primary.crni{
 
     background-color: black;
     color:white;
     margin-left:-20px;
     margin-top:10px;
 
-}
+} */
 .example-form {
     min-width: 150px;
     max-width: 500px;
