--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
-  <form class="lead example-form" (submit)="userLogin($event)" align>
+  <form class="lead example-form" (submit)="userLogin()" align>
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Login ID" >
+      <input matInput placeholder="Login ID" [formControl]="username" >
     </mat-form-field>
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Šifra" >
+      <input matInput placeholder="Šifra" [formControl]="password" >
     </mat-form-field>
     <button class="btn btn-lg btn-success" >Prijavi se</button>
   </form>
