--- a/src/app/user-search/user-search.component.html
+++ b/src/app/user-search/user-search.component.html
@@ -54,7 +54,7 @@
           
               <ng-container matColumnDef="Opcije">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Opcije </th>
-                <td mat-cell *matCellDef="let row"> Detalji </td>
+                <td mat-cell *matCellDef="let row"> <button mat-raised-button color="primary" (click)="onDetails(row.uid)">Detalji</button> </td>
               </ng-container>
           
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
