--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">
       <img src="assets/MTS-Telekom-final-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-      Delegated Admin - Telekom
+      Delegated Administrator - Telekom
     </a>
   </nav>
 <div id="container-navbar">
