--- a/src/app/user-search/user-search.component.html
+++ b/src/app/user-search/user-search.component.html
@@ -44,7 +44,7 @@
               <ng-container matColumnDef="Ime i prezime">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Ime i prezime </th>
            
-                <td mat-cell *matCellDef="let row"> {{row.uid}} {{ row.sn }}</td>
+                <td mat-cell *matCellDef="let row"> {{ row.cn }}</td>
               </ng-container>
           
               <ng-container matColumnDef="E-mail">
