--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -22,6 +22,16 @@
             </mat-error>
           </mat-form-field>
         </div>
+        <div class="form-group">
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Lozinka" [formControl]="password" [errorStateMatcher]="matcher" type="password">
+            <mat-hint>Unesite lozinku</mat-hint>
+            <mat-error *ngIf="password.hasError('required')">
+              Lozinka je
+              <strong>obavezna!</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
         <button mat-raised-button color="primary" [disabled]="notEntered()">Kreiraj</button>
         <hr />
       </form>
