--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -6,7 +6,7 @@
             <ng-template matStepLabel>Unos osnovnih informacija</ng-template>
             <div class="form-group">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Ime" formControlName="firstName" [errorStateMatcher]="matcher">
+                  <input matInput placeholder="Ime*" formControlName="firstName" [errorStateMatcher]="matcher">
                   <mat-hint>Unesite ime korinsika</mat-hint>
                   <mat-error *ngIf="firstFormGroup.value.firstName == ''">
                     Ime je
@@ -16,7 +16,7 @@
               </div>
               <div class="form-group">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Prezime" formControlName="lastName" [errorStateMatcher]="matcher">
+                  <input matInput placeholder="Prezime*" formControlName="lastName" [errorStateMatcher]="matcher">
                   <mat-hint>Unesite prezime korinsika</mat-hint>
                   <mat-error *ngIf="firstFormGroup.value.lastName == ''">
                     Prezime je
@@ -26,7 +26,7 @@
               </div>
               <div class="form-group">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Lozinka" formControlName="password" [errorStateMatcher]="matcher" type="password">
+                  <input matInput placeholder="Lozinka*" formControlName="password" [errorStateMatcher]="matcher" type="password">
                   <mat-hint>Unesite lozinku</mat-hint>
                   <mat-error *ngIf="firstFormGroup.value.password == ''">
                     Lozinka je
@@ -63,7 +63,7 @@
                 <div *ngIf="selectedPackage != null">
                   <mat-card>
                     <mat-card-content>
-                      <h4 class="example-h2">Podešavanja servisnog paketa</h4>
+                      <h4 class="example-h2">Podešavanje servisnog paketa</h4>
                       <mat-tab-group class="demo-tab-group">
                         <mat-tab label="Mail">
                           <div class="form-group">
